--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pinia": "^3.0.2",
     "qrcode": "^1.5.4",
     "sanitize.css": "^13.0.0",
+    "nodemailer": "^6.10.0",
     "socket.io-client": "^4.8.1",
     "ua-parser-js": "^2.0.3",
     "v-calendar": "^3.1.2",
@@ -63,6 +64,7 @@
     "@nuxt/eslint-config": "^1.3.0",
     "@nuxtjs/stylelint-module": "^5.2.1",
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
     "@types/vue": "^1.0.31",
     "@vueuse/core": "^13.1.0",
