--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue": "latest"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@floating-ui/vue": "^1.1.6",
     "@fontsource-variable/inter": "^5.2.5",
@@ -89,6 +90,7 @@
     "stylelint-prettier": "^5.0.3",
     "svgo": "^3.3.2",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.2",
+    "swiper": "^11.2.1"
   }
 }
